@@ -22,6 +22,8 @@
 
 #include "RoutePlannerGlue.hpp"
 #include "Terrain/RasterTerrain.hpp"
+#include "Airspace/NotAckedDayPredicate.hpp"
+#include "Util/Manual.hpp"
 
 void
 RoutePlannerGlue::SetTerrain(const RasterTerrain *_terrain)
@@ -39,13 +41,25 @@ RoutePlannerGlue::SetTerrain(const RasterTerrain *_terrain)
 
 void
 RoutePlannerGlue::Synchronise(const Airspaces &master,
+                              const ProtectedAirspaceWarningManager *warnings,
                               const AGeoPoint &origin,
                               const AGeoPoint &destination)
 {
+  /* ignore acked airspaces (if we have an AirspaceWarningManager) */
+  Manual<WrapAirspacePredicate<NotAckedDayPredicate>> not_acked_predicate;
+  if (warnings != nullptr)
+    not_acked_predicate.Construct(*warnings);
+
+  const AirspacePredicate &not_acked_predicate2 = not_acked_predicate;
   AirspacePredicateTrue true_predicate;
-  const AirspacePredicate &predicate = true_predicate;
+  const AirspacePredicate &predicate = warnings != nullptr
+    ? not_acked_predicate2
+    : true_predicate;
 
   planner.Synchronise(master, predicate, origin, destination);
+
+  if (warnings != nullptr)
+    not_acked_predicate.Destruct();
 }
 
 bool
